# mesa-turnip-kgsl

./: .gitlab-ci.yml  .mailmap  .travis.yml  Android.common.mk  Android.mk  Makefile.am  README.rst  REVIEWERS  SConstruct  appveyor.yml  configure.ac  convert-sphinx.py  meson.build  meson_options.txt  update-docs.sh
.appveyor/: appveyor_msvc.bat
.gitlab-ci/: Dockerfile.ubuntu  README.md  arm64.config  build-apitrace.sh  build-cts-runner.sh  build-deqp-gl.sh  build-deqp-runner.sh  build-deqp-vk.sh  build-deqp.sh  build-fossilize.sh  build-gfxreconstruct.sh  build-libdrm.sh  build-piglit.sh  build-renderdoc.sh  build-virglrenderer.sh  build-vulkantools.sh  create-cross-file.sh  create-rootfs.sh  cross-xfail-s390x  debian-arm64-install.sh  debian-arm64-test-install.sh  debian-install.sh  (+67 more)
src/amd/compiler/tests/: check_output.py  helpers.cpp  helpers.h  main.cpp  meson.build  test_assembler.cpp  test_builder.cpp  test_insert_nops.cpp  test_isel.cpp  test_optimizer.cpp  test_regalloc.cpp  test_to_hw_instr.cpp
src/asahi/compiler/: agx_compile.c  agx_compile.h  agx_compiler.h  agx_opcodes.py  agx_optimizer.c  agx_pack.c  agx_print.c  agx_register_allocate.c  cmdline.c  meson.build
src/broadcom/vulkan/: meson.build  v3dv_bo.c  v3dv_bo.h  v3dv_cl.c  v3dv_cl.h  v3dv_cmd_buffer.c  v3dv_debug.h  v3dv_descriptor_set.c  v3dv_device.c  v3dv_extensions.py  v3dv_extensions_gen.py  v3dv_formats.c  v3dv_image.c  v3dv_limits.h  v3dv_meta_clear.c  v3dv_meta_copy.c  v3dv_pass.c  v3dv_pipeline.c  v3dv_pipeline_cache.c  v3dv_private.h  v3dv_query.c  v3dv_queue.c  v3dv_uniforms.c  v3dv_wsi.c  vk_format_info.h
src/freedreno/decode/: cffdec.c  cffdump.c  crashdec.c  disasm-a2xx.c  disasm-a3xx.c  disasm.h  instr-a2xx.h  instr-a3xx.h  meson.build  pgmdump.c  pgmdump2.c  rnnutil.c  script.c
src/freedreno/decode/scripts/: texturator-to-unit-test.lua
src/gallium/drivers/iris/: Android.mk  Makefile.sources  driinfo_iris.h  iris_batch.c  iris_batch.h  iris_binder.c  iris_binder.h  iris_blit.c  iris_blorp.c  iris_border_color.c  iris_bufmgr.c  iris_bufmgr.h  iris_clear.c  iris_context.c  iris_context.h  iris_defines.h  iris_disk_cache.c  iris_draw.c  iris_fence.c  iris_fence.h  iris_formats.c  iris_genx_macros.h  iris_genx_protos.h  iris_measure.c  iris_measure.h  iris_monitor.c  iris_monitor.h  iris_perf.c  iris_perf.h  iris_performance_query.c  iris_pipe.c  iris_pipe.h  iris_pipe_control.c  iris_program.c  iris_program_cache.c  iris_query.c  iris_resolve.c  iris_resource.c  iris_resource.h  iris_screen.c  (+5 more)
src/gallium/drivers/iris/ci/: gitlab-ci.yml
src/gallium/drivers/lima/: Android.mk  lima_bo.c  lima_context.c  lima_context.h  lima_draw.c  lima_fence.c  lima_format.c  lima_format.h  lima_gpu.h  lima_job.c  lima_parser.c  lima_parser.h  lima_program.c  lima_query.c  lima_resource.c  lima_resource.h  lima_screen.c  lima_screen.h  lima_state.c  lima_submit.c  lima_submit.h  lima_texture.c  lima_texture.h  lima_tiling.c  lima_tiling.h  lima_util.c  lima_util.h  meson.build
src/gallium/drivers/lima/ci/: deqp-lima-skips.txt
src/gallium/drivers/lima/ir/: lima_ir.h  lima_nir_lower_uniform_to_scalar.c  lima_nir_split_load_input.c
src/gallium/drivers/lima/ir/gp/: codegen.c  disasm.c  gpir.h  instr.c  lower.c  nir.c  node.c  optimize.c  physical_regalloc.c  reduce_scheduler.c  regalloc.c  scheduler.c  value_regalloc.c
src/gallium/drivers/lima/ir/pp/: codegen.c  codegen.h  disasm.c  instr.c  liveness.c  lower.c  nir.c  node.c  node_to_instr.c  ppir.h  regalloc.c
src/gallium/drivers/lima/standalone/: lima_compiler_cmdline.c
src/gallium/drivers/panfrost/: .gitignore  Android.mk  Makefile.sources  meson.build  pan_afbc.c  pan_allocate.c  pan_allocate.h  pan_assemble.c  pan_attributes.c  pan_blend.h  pan_blend_cso.c  pan_blend_cso.h  pan_blend_shaders.c  pan_blend_shaders.h  pan_blending.c  pan_blending.h  pan_blit.c  pan_bo.c  pan_bo.h  pan_bo_cache.c  pan_cmdstream.c  pan_cmdstream.h  pan_compute.c  pan_context.c  pan_context.h  pan_drm.c  pan_drm.h  pan_format.c  pan_format.h  pan_fragment.c  pan_instancing.c  pan_invocation.c  pan_job.c  pan_job.h  pan_mfbd.c  pan_pretty_print.c  pan_pretty_print.h  pan_public.h  pan_resource.c  pan_resource.h  (+15 more)
src/gallium/drivers/panfrost/bifrost/: disassemble.c
src/gallium/drivers/panfrost/ci/: Dockerfile  create-rootfs.sh  debian-install.sh  deqp-panfrost-g52-fails.txt  deqp-panfrost-g52-skips.txt  deqp-runner.sh  expected-failures.txt  generate_lava.py  gitlab-ci.yml  lava-deqp.yml.jinja2
src/gallium/drivers/panfrost/include/: panfrost-job.h
src/gallium/drivers/panfrost/midgard/: assemble.py  cmdline.c  compiler.h  disassemble.c  helpers.h  midgard.h  midgard_compile.c  midgard_compile.h  midgard_emit.c  midgard_liveness.c  midgard_nir.h  midgard_nir_algebraic.py  midgard_ops.c  midgard_ops.h  midgard_print.c  midgard_ra.c  midgard_ra_pipeline.c  midgard_schedule.c  mir.c  nir_lower_blend.c  nir_lower_blend.h  nir_lower_framebuffer.c  nir_undef_to_zero.c
src/gallium/drivers/panfrost/nir/: nir_clamp_psiz.c  nir_lower_blend.c  nir_lower_blend.h  nir_lower_framebuffer.c  nir_undef_to_zero.c
src/gallium/drivers/panfrost/pandecode/: cmdline.c  common.c  decode.c  decode.h  mmap.h
src/gallium/frontends/vallium/: meson.build  val_cmd_buffer.c  val_descriptor_set.c  val_device.c  val_entrypoints_gen.py  val_execute.c  val_extensions.py  val_formats.c  val_image.c  val_lower_input_attachments.c  val_lower_vulkan_resource.c  val_lower_vulkan_resource.h  val_pass.c  val_pipeline.c  val_pipeline_cache.c  val_private.h  val_query.c  val_util.c  val_wsi.c  val_wsi.h  val_wsi_wayland.c  val_wsi_x11.c
src/gallium/targets/lavapipe/: lvp_icd.py  meson.build
src/gallium/targets/vallium/: meson.build  val_icd.py
src/virtio/vulkan/: meson.build  vn_android.c  vn_android.h  vn_buffer.c  vn_command_buffer.c  vn_common.c  vn_common.h  vn_cs.c  vn_cs.h  vn_device.c  vn_device.h  vn_device_memory.c  vn_image.c  vn_image.h  vn_queue.c  vn_queue.h  vn_render_pass.c  vn_renderer.h  vn_renderer_virtgpu.c  vn_renderer_vtest.c  vn_ring.c  vn_ring.h  vn_wsi.c  vn_wsi.h
(+3733 files in other folders)
